--- a/UrbanDjango/templates/second_task/func_template.html
+++ b/UrbanDjango/templates/second_task/func_template.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>
-        "Это шаблон для функциональногоы представления"
+        "Это шаблон для функционального представления"
     </h2>
 </body>
 </html>
